# computacao-cientifica-aplicada

./: README.md  cpp_lib_in_colab.ipynb
CCA-Lista1/: CMakeLists.txt  questao_1.cpp  questao_2.cpp  questao_3.cpp  questao_4.cpp  questao_5.cpp  questao_6.cpp  questao_7.cpp  questao_8.cpp  questao_9.cpp
CCA-Lista2/: questao_1.cpp  questao_10.cpp  questao_2.cpp  questao_3.cpp  questao_5.cpp  questao_6.cpp  questao_7.cpp  questao_8.cpp  questao_9.cpp  vcpkg.json
CCA-Lista3/: questao_1.cpp  questao_5.cpp  questao_6.cpp
CCA-Lista4/: CMakeLists.txt  questao_1.cpp  questao_2.cpp
CCA_Lista2/: CMakeLists.txt  questao_1.cpp  questao_10.cpp  questao_4.cpp  questao_6.cpp  questao_7.cpp  questao_9.cpp
CCA_Lista3/: CMakeLists.txt  questao_1.cpp  questao_2.cpp  questao_3.cpp  questao_3_bizarra.cpp  questao_4.cpp  questao_5.cpp  questao_6.cpp
